--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -60,7 +60,6 @@
     <style>
     #button_home {
       position: fixed;
-      display: block;
       right: 0;
       bottom: 0;
       margin-right: 30px;
@@ -128,7 +127,7 @@
                 Android 9 (Pie) or higher required.
               </p>
               <p>
-                Settings <icon class="fa-solid fa-cog"></icon> <icon class="fa-solid fa-right-long"></icon> Search <icon class="fa-solid fa-magnifying-glass"></icon> <icon class="fa-solid fa-right-long"></icon> Search for "Private DNS" <icon class="fa-solid fa-right-long"></icon> Select "Private DNS" <icon class="fa-solid fa-right-long"></icon> Select "Designated Private DNS" <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>" <icon class="fa-solid fa-right-long"></icon> Done.
+                Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-right-long"></icon> Search <icon class="fa-solid fa-magnifying-glass"></icon>, <icon class="fa-solid fa-right-long"></icon> Search for "Private DNS", <icon class="fa-solid fa-right-long"></icon> Select "Private DNS", <icon class="fa-solid fa-right-long"></icon> Select "Designated Private DNS", <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-right-long"></icon> Done.
               </p>
            </div>
         </div>
@@ -137,7 +136,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="googlechrome"><icon class="fa-brands fa-chrome"></icon> Google Chrome/Chromium</h3>
               <p>
-                Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon> <icon class="fa-solid fa-cog"></icon> <icon class="fa-solid fa-right-long"></icon> Settings <icon class="fa-solid fa-right-long"></icon> Select "Privacy and security" <icon class="fa-solid fa-right-long"></icon> Select "Use secure DNS" <icon class="fa-solid fa-right-long"></icon> Select "Choose another provider" <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>" <icon class="fa-solid fa-right-long"></icon> Done.
+                Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon>, <icon class="fa-solid fa-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-right-long"></icon> Select "Privacy and security", <icon class="fa-solid fa-right-long"></icon> Select "Use secure DNS", <icon class="fa-solid fa-right-long"></icon> Select "Choose another provider", <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-right-long"></icon> Done.
               </p>
            </div>
         </div>
@@ -146,7 +145,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> Mozilla Firefox</h3>
               <p>
-                Menu <icon class="fa-solid fa-bars"></icon> <icon class="fa-solid fa-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon> <icon class="fa-solid fa-right-long"></icon> Select "General" <icon class="fa-solid fa-right-long"></icon> Select "Network Settings" <icon class="fa-solid fa-right-long"></icon> Select "Settings" <icon class="fa-solid fa-right-long"></icon> Select "Enable DNS over HTTPS" <icon class="fa-solid fa-right-long"></icon> Select "Use Provider" <icon class="fa-solid fa-right-long"></icon> Select "Custom" <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>" <icon class="fa-solid fa-right-long"></icon> Select "OK" <icon class="fa-solid fa-right-long"></icon> Done.
+                Menu <icon class="fa-solid fa-bars"></icon>, <icon class="fa-solid fa-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-right-long"></icon> Select "General", <icon class="fa-solid fa-right-long"></icon> Select "Network Settings", <icon class="fa-solid fa-right-long"></icon> Select "Settings", <icon class="fa-solid fa-right-long"></icon> Select "Enable DNS over HTTPS", <icon class="fa-solid fa-right-long"></icon> Select "Use Provider", <icon class="fa-solid fa-right-long"></icon> Select "Custom", <icon class="fa-solid fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-right-long"></icon> Select "OK", <icon class="fa-solid fa-right-long"></icon> Done.
               </p>
            </div>
         </div>
@@ -165,5 +164,6 @@
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
+    <script type="text/javascript" src="resources/javascript/scroll_listener.js"></script>
   </body>
 </html>
