--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -61,7 +61,6 @@
     <style>
     #button_home {
       position: fixed;
-      display: block;
       right: 0;
       bottom: 0;
       margin-right: 30px;
@@ -141,5 +140,6 @@
     <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
+    <script type="text/javascript" src="resources/javascript/scroll_listener.js"></script>
   </body>
 </html>
