--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Projects</b></a><br><a href="#dnsproxy-config">dnsproxy-config</a>, <a href="#haha_cache_go_brrr">haha_cache_go_brrr</a>, <a href="#munin-pihole-plugins">munin-pihole-plugins</a>, <a href="#sainternet_xyz">sainternet.xyz</a>, <a href="#unbound-config">unbound-config</a>
+              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Projects</b></a><br><a href="#dnsproxy-config">dnsproxy-config</a>, <a href="#haha_cache_go_brrr">haha_cache_go_brrr</a>, <a href="#munin-pihole-plugins">munin-pihole-plugins</a>, <a href="#saint-lascivious_github_io">saint-lascivious.github.io</a>, <a href="#unbound-config">unbound-config</a>
             </div>
           </div>
         </div>
@@ -137,9 +137,9 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="sainternet_xyz"><span class="embiggen">sainternet.xyz</span></h3>
+            <h3 id="saint-lascivious_github_io"><span class="embiggen">saint-lascivious.github.io</span></h3>
               <p>
-                <a href="https://github.com/saint-lascivious/saint-lascivious.github.io">sainternet.xyz</a>
+                <a href="https://github.com/saint-lascivious/saint-lascivious.github.io">saint-lascivious.github.io</a>
               </p>
               <p>
                 sainternet.xyz
