--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -160,7 +160,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Console Logging</span></h3>
             <span id="tooltip-consolelogging">
-              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="toggleDebugFlag()">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="toggleFlag(DEBUG)">
                 Console Logging
               </button>
             </span>
