--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -173,7 +173,7 @@
               </picture>
             </a>
             <p>
-              This fun little (<i>ab</i>)use of DNS allows one to query a Pokémon species name (currently supported: English) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji</a>).
+              This fun little (<i>ab</i>)use of DNS allows one to query a Pokémon species name (currently supported: US, JP, FR, DE) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: US, JP <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji</a>, FR, DE).
             </p>
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
